--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 ul,
@@ -403,7 +404,7 @@ body.lock {
 }
 
 .skills__main-title {
-  margin: 0 0 15px 20px;
+  margin: 0 0 30px 20px;
 }
 .skills__items {
   display: flex;
@@ -419,9 +420,18 @@ body.lock {
   padding: 0 15px;
 }
 .skills__icon {
-  flex: 1 0 80px;
+  flex: 0 0 80px;
+  position: relative;
   width: 80px;
   margin-bottom: 0.9375em;
+}
+.skills__icon img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 110%;
+  height: 100%;
+  object-fit: contain;
 }
 .skills__title {
   margin-bottom: 0.5em;
@@ -459,7 +469,7 @@ body.lock {
 }
 
 .gallery-works__main-title {
-  margin: 0 0 15px 0;
+  margin: 0 0 30px 20px;
 }
 .gallery-works__row {
   display: flex;
@@ -536,6 +546,10 @@ body.lock {
   .gallery-works__title {
     font-size: 1rem;
   }
+}
+.gallery-works__title_white {
+  color: #fff;
+  text-shadow: 4px 3px 0px #000, 9px 8px 0px rgba(0, 0, 0, 0.15);
 }
 .gallery-works__image {
   position: relative;
@@ -637,25 +651,7 @@ body.lock {
   margin-bottom: 30px;
 }
 .create-message__title {
-  margin-bottom: 15px;
-}
-@media (min-width: 75.625em) {
-  .create-message__title {
-    font-size: 2rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 75.625em) {
-  .create-message__title {
-    font-size: calc(
-        2rem + 0 *
-          (((100vw - 20rem)) / ((55.625)))
-      );
-  }
-}
-@media (max-width: 20em) {
-  .create-message__title {
-    font-size: 2rem;
-  }
+  margin: 0 0 30px 20px;
 }
 .create-message__buttons {
   flex: 1 1 100%;
